@@ -1,3 +1,9 @@
+2006-04-01  Christian Persch  <chpe@cvs.gnome.org>
+
+        * embed/mozilla/EphyPromptService.cpp:
+
+	Fix crash when cancelling the prompt before the timeout has run.
+
 2006-03-28  Jean-François Rameau  <jframeau@cvs.gnome.org>
 
 	* configure.ac:
